Fixed thumbs being misaligned

--- a/app/assets/stylesheets/thumbs/videos.css
+++ b/app/assets/stylesheets/thumbs/videos.css
@@ -157,4 +157,8 @@ li.generic.mix .tile::after {
   .tile {
     min-height: 80px;
   }
+  
+  .thumb .date {
+    display: none;
+  }
 }
